--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,5 +1,5 @@
 #H2 Server Properties
-#Thu Nov 20 16:08:26 CET 2014
+#Fri Jun 26 16:35:42 CST 2015
 0=JHipster H2 (Embedded)|org.h2.Driver|jdbc\:h2\:mem\:jhipster|
 webAllowOthers=false
 webPort=8082
